* export of a purity value, for phy, to assess how good a cluster is (between 0 and 1)
* display the purity value in MATLAB
* fix a (silent) bug in the supports introduced in 0.9.0, preventing mixture removal
* nb_chances is automatically adapted during the fitting procedure
* drifts are now automatically handled by the meta merging procedure

=============
Release 0.9.1
=============

* minor bug fixes in spyking-circus-launcher
* fix a bug in the amplitude display. Values were shuffled when several CPU were used
* add the option to ignore second component [clustering]->two_components

=============
Release 0.9.0
=============

* can now fit spikes below detection threshold (with ratio_thresh in [fitting], 0.9 as default)
* templates are now estimated without any spatial restrictions
* optimization of the smart search for small recording
* spline regularization was not stable for all probe geometry

=============
Release 0.8.9
=============

* fix a small bug in the smart search, introduced while refactoring in 0.8.7

=============
Release 0.8.8
=============

* fix a regression introduced in 0.8.7 for non contiguous probe indices

=============
Release 0.8.7
=============

* new methods to detect the peaks, more robust when low thresholds are fixed
* more accurate fitting procedure, slightly slower
* minor bug fixes
* addition of a sparsity_limit parameter in the meta merging GUI, to remove noise more precisely
* new parameter file is properly copied
* enhancement of the smoothing/alignement procedure, more accurate estimation of noisy templates
* better estimation of the amplitudes boundaries used during fitting
* optimization while removing mixtures and important bug fixes
* fix a bug in the thresholding method
* minor updates to get more refined spikes during whitening and clustering
* tests with SpikeInterface, showing clear increase in performance
* some cleaning in the parameter file